[tool.poetry]
name = "test-unit4pgbench"
version = "0.1.0"
description = "Сервис планирования и проведения stress тестирования баз данных postgresql в kubernetes"
authors = ["Новиков Илья <nov.ilucha@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^29.0.0"
jinja2 = "^3.1.3"
pydantic = ">=2.4.1,<2.6"
pandas = "^2.2.1"
pydantic-settings = "^2.2.1"
aiogram = "^3.4.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
